--- a/app/src/main/res/layout/activity_principal.xml
+++ b/app/src/main/res/layout/activity_principal.xml
@@ -18,6 +18,10 @@
         android:background="#f6f6f6"
         android:choiceMode="singleChoice"
         android:divider="#abb8baae"
-        android:dividerHeight="1dp"/>
+        android:dividerHeight="1dp"
+        android:headerDividersEnabled="false"
+        android:touchscreenBlocksFocus="false"
+        android:theme="@style/Base.TextAppearance.AppCompat"
+        style="@style/Base.TextAppearance.AppCompat" />
 
 </android.support.v4.widget.DrawerLayout>
